--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
 {"@type":"WebSite","url":"/","headline":"Brew Crew","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
+    <!--Google Analytics-->
+    
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165677559-1"></script>
+      <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'UA-165677559-1');
+      </script>
+    
   </head>
   <body>
       <header>
