enable google adsense

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <meta property="og:title" content="Brew Crew" />
 <meta property="og:locale" content="en_US" />
 <script type="application/ld+json">
-{"@type":"WebSite","url":"/","headline":"Brew Crew","@context":"https://schema.org"}</script>
+{"headline":"Brew Crew","@type":"WebSite","url":"/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <!--Google Analytics-->
@@ -47,6 +47,8 @@
         gtag('js', new Date());
         gtag('config', 'UA-165677559-1');
       </script>
+      <!--Google Adsense-->
+      <script data-ad-client="ca-pub-5460152216037441" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     
   </head>
   <body>
