--- a/authors.html
+++ b/authors.html
@@ -20,7 +20,7 @@
 <meta property="og:title" content="Brew Crew Contributors" />
 <meta property="og:locale" content="en_US" />
 <script type="application/ld+json">
-{"@type":"WebPage","url":"/authors.html","headline":"Brew Crew Contributors","@context":"https://schema.org"}</script>
+{"headline":"Brew Crew Contributors","@type":"WebPage","url":"/authors.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <!--Google Analytics-->
