--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
 <meta property="og:title" content="About the Crew" />
 <meta property="og:locale" content="en_US" />
 <script type="application/ld+json">
-{"@type":"WebPage","url":"/about.html","headline":"About the Crew","@context":"https://schema.org"}</script>
+{"headline":"About the Crew","@type":"WebPage","url":"/about.html","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <!--Google Analytics-->
