--- a/authors.html
+++ b/authors.html
@@ -35,7 +35,7 @@
 <meta property="twitter:title" content="Brew Crew Contributors" />
 <meta name="twitter:site" content="@TheBrewCrew13" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"Brew Crew Contributors","url":"https://brewcrew.net/authors.html","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://brewcrew.net/assets/images/logo.png"}},"description":"Contributing Authors Chev Eldrid Technical Lead, Founder Eric von Allmen Contributing Author, Editor Julian Leal Creative Lead, Founder Oakley Reid Contributing Author, Technical Assistant","@context":"https://schema.org"}</script>
+{"@type":"WebPage","url":"https://brewcrew.net/authors.html","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://brewcrew.net/assets/images/logo.png"}},"description":"Contributing Authors Chev Eldrid Technical Lead, Founder Eric von Allmen Contributing Author, Editor Julian Leal Creative Lead, Founder Oakley Reid Contributing Author, Technical Assistant","headline":"Brew Crew Contributors","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <!--Twitter-->
@@ -198,7 +198,7 @@
                     </div>
                     <div class="float-right">
                         <a class="accented-link" href="https://twitter.com/TheBrewCrew13" target="_blank"><i class="fa fa-twitter fa-lg"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
-                        <a class="accented-link" href="https://www.twitch.tv/brew_crew" target="_blank"><i class="fa fa-twitch fa-lg"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                        <a class="accented-link" href="https://www.youtube.com/channel/UCaUUnVOJqOa6QYtoKWEbCFQ/videos" target="_blank"><i class="fa fa-youtube fa-lg"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
                         <a class="accented-link"href="mailto:itsthebrewcrew@gmail.com?subject=Site%20Link"><i class="fa fa-envelope fa-lg"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
                     </div>
                 </div>
@@ -207,16 +207,5 @@
 </footer>
       <!--Google Analytics-->
       
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-165677559-1"></script>
-        <script>
-          window.dataLayer = window.dataLayer || [];
-          function gtag(){dataLayer.push(arguments);}
-          gtag('js', new Date());
-          gtag('config', 'UA-165677559-1');
-        </script>
-        <!--Google Adsense-->
-        <script data-ad-client="ca-pub-5460152216037441" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-    
   </body>
 </html>
