historically speaking 2 publish

--- a/authors.html
+++ b/authors.html
@@ -35,7 +35,7 @@
 <meta property="twitter:title" content="Brew Crew Contributors" />
 <meta name="twitter:site" content="@TheBrewCrew13" />
 <script type="application/ld+json">
-{"@type":"WebPage","url":"https://brewcrew.net/authors.html","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://brewcrew.net/assets/images/logo.png"}},"description":"Contributing Authors Chev Eldrid Technical Lead, Founder Eric von Allmen Contributing Author, Editor Julian Leal Creative Lead, Founder Oakley Reid Contributing Author, Technical Assistant","headline":"Brew Crew Contributors","@context":"https://schema.org"}</script>
+{"@type":"WebPage","headline":"Brew Crew Contributors","url":"https://brewcrew.net/authors.html","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://brewcrew.net/assets/images/logo.png"}},"description":"Contributing Authors Chev Eldrid Technical Lead, Founder Eric von Allmen Contributing Author, Editor Julian Leal Creative Lead, Founder Oakley Reid Contributing Author, Technical Assistant","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <!--Twitter-->
