add custom cards

--- a/page3/index.html
+++ b/page3/index.html
@@ -36,7 +36,7 @@
 <meta property="twitter:title" content="The Brew Crew" />
 <meta name="twitter:site" content="@TheBrewCrew13" />
 <script type="application/ld+json">
-{"@type":"WebPage","headline":"The Brew Crew","url":"https://brewcrew.net/page3/","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://brewcrew.net/assets/images/logo.png"}},"description":"On the Rocks Mo&#39; Auras, Mo&#39; Problems (Standard) My enchantresses only wear designer. Rev Your Engines Offspring&#39;s Revenge (Standard) If Bambi Was Rated R... Enter The Guildhall Siona and the Argonauts (Brawl) Building a Selesnya Auras deck that packs quite the punch Rev Your Engines Titan&#39;s Nest (Standard) Don&#39;t Count Your Titans Before They Hatch... Intro Welcome to the Brew Crew! Introducing a brand new site full of incredible MTG Content &laquo; Prev &nbsp; 1 &nbsp; 2 &nbsp; 3 &nbsp; Next &raquo;","@context":"https://schema.org"}</script>
+{"@type":"WebPage","url":"https://brewcrew.net/page3/","publisher":{"@type":"Organization","logo":{"@type":"ImageObject","url":"https://brewcrew.net/assets/images/logo.png"}},"description":"On the Rocks Mo&#39; Auras, Mo&#39; Problems (Standard) My enchantresses only wear designer. Rev Your Engines Offspring&#39;s Revenge (Standard) If Bambi Was Rated R... Enter The Guildhall Siona and the Argonauts (Brawl) Building a Selesnya Auras deck that packs quite the punch Rev Your Engines Titan&#39;s Nest (Standard) Don&#39;t Count Your Titans Before They Hatch... Intro Welcome to the Brew Crew! Introducing a brand new site full of incredible MTG Content &laquo; Prev &nbsp; 1 &nbsp; 2 &nbsp; 3 &nbsp; Next &raquo;","headline":"The Brew Crew","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
 
     <!--Twitter-->
